--- a/src/app/Produtos/casdastro/casdastro.page.html
+++ b/src/app/Produtos/casdastro/casdastro.page.html
@@ -1,36 +1,98 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Casdastro</ion-title>
+    <ion-title>Cadastro</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Casdastro</ion-title>
+      <ion-title size="large">Cadastro</ion-title>
     </ion-toolbar>
   </ion-header>
-  <form>
-    <ion-item>
-      <ion-label></ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label></ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label></ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label></ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label></ion-label>
-      <ion-input></ion-input>
-    </ion-item>
-  </form>
+  <ng-container *ngIf="VestesForm">
+    <form [formGroup]="VestesForm" submit="submit()">
+
+      <ion-item [disabled]="!modoEdicao">  
+        <ion-input label="Nome do Produto" labelPlacement="floating" formControlName="nome"></ion-input>
+      </ion-item>
+  
+      <ion-item [disabled]="!modoEdicao">
+        <ion-input label="Tamanho do Produto" labelPlacement="floating" formControlName="tamanho"></ion-input>
+      </ion-item>
+  
+      <ion-item [disabled]="!modoEdicao">
+        <ion-input label="Modelo" labelPlacement="floating" formControlName="modelo"></ion-input>
+      </ion-item>
+  
+      <ion-item [disabled]="!modoEdicao">
+        <ion-input label="Cor" labelPlacement="floating" formControlName="cor"></ion-input>
+      </ion-item>
+  
+      <ion-item [disabled]="!modoEdicao">
+        <ion-input type="number" label="Valor" labelPlacement="floating" formControlName="valor"></ion-input>
+      </ion-item>
+  
+      <ion-item [disabled]="!modoEdicao">
+        <ion-label>Condição</ion-label>
+        <ion-segment formControlName="condicao">
+    
+          <ion-segment-button value="suja">
+            <ion-label>Suja</ion-label>
+          </ion-segment-button>
+  
+          <ion-segment-button value="limpa">
+            <ion-label>Limpa</ion-label>
+          </ion-segment-button>
+  
+          <ion-segment-button value="alugada">
+            <ion-label>Alugada</ion-label>
+          </ion-segment-button>
+  
+        </ion-segment>
+  
+      </ion-item>
+      <ion-item [disabled]="!modoEdicao">
+        <ion-label>Variedade</ion-label>
+        <ion-segment formControlName="variedade">
+  
+          <ion-segment-button value="masculina">
+            <ion-label>Masculina</ion-label>
+          </ion-segment-button>
+  
+          <ion-segment-button value="feminino">
+            <ion-label>Feminino</ion-label>
+          </ion-segment-button>
+  
+          <ion-segment-button value="unissex">
+            <ion-label>Unissex</ion-label>
+          </ion-segment-button>
+  
+        </ion-segment>
+      </ion-item>
+  
+      <ion-button	*ngIf="!modoEdicao" shape="round" color="primary" expand="block" padding	(click)="iniciarEdicao()">
+        Alterar	dados
+      </ion-button>
+
+      <div	*ngIf="modoEdicao" no-padding>
+        <ion-grid>
+          <ion-row>
+            <ion-col	col-6	>
+              <ion-button	shape="round" color="success" size="small" padding type="submit" expand="block">
+                Gravar
+              </ion-button>
+            </ion-col>
+            <ion-col	col-6>
+              <ion-button	shape="round" color="warning" size="small" padding	(click)="cancelarEdicao()"		expand="block">
+                Cancelar
+              </ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </div>
+      
+    </form>
+  </ng-container>
 
 </ion-content>
