--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,6 +14,6 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
+    <ion-button routerLink="/listagem">Cadastro</ion-button>
   </div>
 </ion-content>
