--- a/src/app/Produtos/listagem/listagem.page.html
+++ b/src/app/Produtos/listagem/listagem.page.html
@@ -1,13 +1,33 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>Listagem</ion-title>
+    <ion-title>Vestes</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <ion-list	#slidingList>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Listagem</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-item-sliding	*ngFor="let veste of vestes">
+
+      <ion-item	routerLink='/casdastro/{{idAsString(veste.id)}}'>
+        <ion-label>
+          <h2>{{veste.nome}}</h2>
+          <p style="text-align:right">R$ {{veste.valor}}</p>
+        </ion-label>
+      </ion-item>
+
+      <ion-item-options>
+        <ion-item-option color="danger"(click)="Removerveste(veste)">
+          <ion-icon name="trash">Apagar</ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+    </ion-item-sliding>
+    
+  </ion-list>
+
+  <ion-fab vertical="top" horizontal="end" slot="fixed" edge="true">
+    <ion-fab-button	routerLink='/casdastro/-1'>
+      <ion-icon	name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
